--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -6,11 +6,11 @@
 }
 
 .login-container {
-  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  height: 100vh;
+  background-color: #f5f5f5;
 }
 
 .svg-container {
@@ -29,13 +29,14 @@
 .login-card {
   width: 100%;
   max-width: 400px;
-  padding: 20px;
+  margin: 2rem;
+  padding: 2rem;
   border-radius: 16px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
 
 mat-card-header {
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
   text-align: center;
 }
 
@@ -67,4 +68,21 @@ mat-form-field {
   ::ng-deep .mat-mdc-form-field-outline {
     border-radius: 8px;
   }
+  margin-bottom: 1rem;
+}
+
+.button-container {
+  position: relative;
+  margin-top: 1rem;
+}
+
+.spinner-inside-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+::ng-deep .mat-mdc-progress-spinner {
+  --mdc-circular-progress-active-indicator-color: white;
 }
